2005-09-27  Carl Worth  <cworth@cworth.org>

	* ROADMAP (https): Add 4612 to the 1.0.2 roadmap.

2005-09-27  T Rowley  <tim.rowley@gmail.com>

	* ROADMAP: Note that Bug #4602 (use of 0x0 images
	causes win32 backend failure) is now fixed.
	
	* src/cairo-win32-surface.c (_create_dc_and_bitmap):
	Avoid creating size-0 bitmap, which fails.

2005-09-27  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that bug #4409 (Dashes are missing initial caps)
	is now fixed.

	* src/cairo-path-stroke.c: (_cairo_stroker_add_cap),
	(_cairo_stroker_add_leading_cap),
	(_cairo_stroker_add_trailing_cap),
	(_cairo_stroker_add_caps): Move face-flipping from inside
	_cairo_stroker_add_caps to new _cairo_stroker_add_leading_cap
	variant of _cairo_stoker_add_cap.

	* src/cairo-path-stroke.c: (_cairo_stroker_line_to_dashed): Change
	to call _cairo_stroker_add_leading_cap or
	_cairo_stroker_add_trailing_cap as appropriate.

	* test/Makefile.am (XFAIL_TESTS): 
	* test/dash-caps-joins-ref.png:
	* test/dash-caps-joins.c: (main): Remove dash-caps-joins from the
	XFAIL list and add reference image.

2005-09-27  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/caps-joins-ref.png:
	* test/caps-joins.c: (make_path), (draw), (main):
	* test/dash-caps-joins.c: (make_path), (draw), (main): Add two
	test cases. One for caps and joins (passes), and one for dashed
	caps and joins, (fails, see bug #4409).

2005-09-26  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Added bug 4599 and 4602 to the 1.0.2 roadmap.

2005-09-26  Tor Lillqvist  <tml@novell.com>

	* src/cairo-win32-font.c (_win32_scaled_font_get_scaled_hfont),
	(_win32_scaled_font_get_unscaled_hfont): Set LOGFONT::lfHeight
	negative. A negative lfHeight means "em height" which is what we
	want, and matches how other toolkits interpret font sizes on
	Win32. (Positive lfHeight means "cell height".) (#4593)
	(_cairo_win32_scaled_font_init_glyph_metrics): If