@@ -1,3 +1,11 @@
+2005-09-28  T Rowley  <tim.rowley@gmail.com>
+
+	* ROADMAP: Note that Bug #4612 (Text not being drawn if first
+	character entirely out of surface) is now fixed.
+	
+	* src/cairo-win32-font.c (_cairo_win32_scaled_font_glyph_bbox):
+	Add cast so that sign conversion doesn't alter comparison.
+
 2005-09-27  Carl Worth  <cworth@cworth.org>
 
 	* ROADMAP (https): Add 4612 to the 1.0.2 roadmap.
